--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
         <div class="collapse navbar-collapse justify-content-between py-4 py-lg-0" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">Bride & Groom</a>
-                <a href="service.html" class="nav-item nav-link">Invitation</a>
+                <a href="#bridegroom" class="nav-item nav-link">Bride & Groom</a>
             </div>
-            <a style="background-color: #9E4446;" href="index.html" class="navbar-brand py-2 px-4 mx-3 d-none d-lg-block">
+            <a style="background-color: #9E4446;" href="#" class="navbar-brand py-2 px-4 mx-3 d-none d-lg-block">
                 <h1 class="text-white">Royalty'23</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
-                <a href="service.html" class="nav-item nav-link">When & Where</a>
-                <a href="project.html" class="nav-item nav-link">Gallery</a>                
-                <a href="contact.html" class="nav-item nav-link">Gifts</a>
+                <a href="#invite" class="nav-item nav-link">Invitation</a>
+                <a href="#gallery" class="nav-item nav-link">Gifts</a>                
+                <a href="#gift" class="nav-item nav-link">Gallery</a>
             </div>
         </div>
     </nav>
@@ -122,7 +121,7 @@
 
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <div id="bridegroom" class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -153,7 +152,7 @@
 
 
     <!-- Header Start -->
-    <div style="background-color: #f1efec;" class="container-fluid hero-header py-5 mb-5">
+    <div id="invite" style="background-color: #f1efec;" class="container-fluid hero-header py-5 mb-5">
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div  style="margin-right: -50px;" class="col-lg-6">
@@ -208,7 +207,7 @@
     
 
     <!-- Facts Start -->
-    <div class="container-xxl py-5">
+    <div id="gift" class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="text-color text-uppercase mb-2">Gifts</p>
@@ -243,7 +242,7 @@
 
 
     <!-- Project Start -->
-    <div class="container-xxl py-5">
+    <div id="gallery" class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="text-color text-uppercase mb-2">Gallery</p>
