--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/love.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -71,9 +71,9 @@
         <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/car3.jpg" style="object-fit: cover;">
+                    <img class="position-absolute" src="img/car3c.jpg" style="object-fit: cover; width: 100%; height: 150%">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="py-3 px-4" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
@@ -88,9 +88,26 @@
                     </div>
                 </div>
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
-                    <img class="position-absolute w-100 h-100" src="img/car.jpg" style="object-fit: cover;">
+                    <img class="position-absolute" src="img/car.jpg" style="object-fit: cover; width: 100%; height: 100%">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="p-3" style="max-width: 900px;">
+                        <div class="py-3 px-4" style="max-width: 900px;">
+                            <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
+                            <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
+                            </div>                           
+                            <div class="timer">
+                                <div class="days"></div>
+                                <div class="hours"></div>
+                                <div class="minutes"></div>
+                                <div class="seconds"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
+                    <img class="position-absolute" src="img/car6.jpg" style="object-fit: cover; width: 100%; height: 100%">
+                    <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
+                        <div class="py-3 px-4" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
@@ -126,12 +143,25 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
-                        <p class="text-uppercase mb-2 text-color">Bride and Groom</p>
-                        <h1 class="display-6 mb-4">Our Love Story</h1>  
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>   
-                        <p>Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>                        
-                     
+                        <h1 class="display-6 mb-4">Our Love Letter</h1>  
+                        <p class="text-uppercase mb-2 text-color"><em>Bride</em></p>                      
+                        <p>
+                            In the midst of pain, I found love, a purposeful love.
+                            You remind me of God's promises to me which makes me rest in the beauty of what is to come.
+                            I am amazed at how selfless your heart is and how you prioritize me.
+                            I asked for a man but I am getting a father, a prophet and a priest.
+                            Your firmness and softness stands you out in the crowd. Thank you for all the behind the scenes, the world may never know.
+                            I am grateful for thus far we have evolved and I look forward to the journey to forever with you.
+                            I love you my Havilah  
+                        </p>  
+                        <p class="text-uppercase mb-2 text-color"><em>Groom</em></p>
+                        <p>
+                            To my priceless and virtuous lady, whose price is far above rubies.  
+                            Your presence in my life has brought beauty and order, I couldn't have earned you
+                            I find it so very difficult to get words to really communicate my heart-felt message because
+                            I could have already exhausted the ones in the pages of my heart. 
+                            You are a gift given by God, and I stand to appreciate God for such a precious gift. Forever together and eternally.
+                        </p>
                     </div>
                 </div>
             </div>
