--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="carousel-item position-relative active" style="height: 100vh; min-height: 400px;">
                     <img class="position-absolute" src="img/car3c.jpg" style="object-fit: cover; width: 100%; height: 150%">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="py-3 px-4" style="max-width: 900px;">
+                        <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
@@ -90,7 +90,7 @@
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
                     <img class="position-absolute" src="img/car.jpg" style="object-fit: cover; width: 100%; height: 100%">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="py-3 px-4" style="max-width: 900px;">
+                        <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
@@ -107,7 +107,7 @@
                 <div class="carousel-item position-relative" style="height: 100vh; min-height: 400px;">
                     <img class="position-absolute" src="img/car6.jpg" style="object-fit: cover; width: 100%; height: 100%">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <div class="py-3 px-4" style="max-width: 900px;">
+                        <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
                                 <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
