--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
                 <h1 class="display-6 mb-5">We Appreciate Your Gifts</h1>
             </div>
             <div class="row g-3">
-                <div class="col-lg-2 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.1s">                   
+                <div class="col-lg-2  pt-lg-5 wow fadeInUp" data-wow-delay="0.1s">                   
                 </div>
-                <div class="col-lg-8 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-8  wow fadeInUp" data-wow-delay="0.3s">
                     <div style="background-color: #f1efec;" class="fact-item text-center h-100 p-5">
                         <p class="text-color text-uppercase mb-2">naira account details</p>
                         <h4 class="mb-3">0149668881</h4>
@@ -247,7 +247,7 @@
                         <h4 class="mb-3">BANK: UBA</h4>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-6 pt-lg-5 wow fadeInUp" data-wow-delay="0.5s">                    
+                <div class="col-lg-2  pt-lg-5 wow fadeInUp" data-wow-delay="0.5s">                    
                 </div>
             </div>
         </div>
