--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px; font-size: 20px;">We're getting married</h3>
                             </div>                           
                             <div class="timer">
                                 <div class="days"></div>
@@ -93,7 +93,7 @@
                         <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px; font-size: 20px;">We're getting married</h3>
                             </div>                           
                             <div class="timer">
                                 <div class="days"></div>
@@ -110,7 +110,7 @@
                         <div class="" style="max-width: 900px;">
                             <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Blessing & Abraham</h1>
                             <div class="d-inline-block border-top border-bottom border-light py-3 px-4">
-                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px;">We're getting married</h3>
+                                <h3 class="text-uppercase font-weight-normal text-white m-0" style="letter-spacing: 2px; font-size: 20px;">We're getting married</h3>
                             </div>                           
                             <div class="timer">
                                 <div class="days"></div>
