--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                       </div>
                 </div>
                 <div class="col-lg-6 animated fadeIn">
-                    <img style="margin-top:20px" class="img-fluid bg-white p-3 w-100 mb-3" src="img/car4.jpg" alt="">
+                    <img style="margin-top:20px" class="img-fluid bg-white p-3 w-100 mb-3" src="img/car6.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -272,7 +272,7 @@
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/2.jpg" alt="">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/3.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -281,12 +281,12 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/3.jpg" alt="">                                
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/4.jpg" alt="">                                
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/4.jpg" alt="">                               
+                                <img class="img-fluid" src="img/2.jpg" alt="">                               
                             </div>
                         </div>
                     </div>
@@ -300,7 +300,7 @@
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/6.jpg" alt="">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/7.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -309,12 +309,68 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/7.jpg" alt="">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/11.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="project-item">
-                                <img class="img-fluid" src="img/8.jpg" alt="">
+                                <img class="img-fluid" src="img/9.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img class="img-fluid" src="img/6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/12.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/8.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img class="img-fluid" src="img/10.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img class="img-fluid" src="img/14.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/13.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img style="width: 306px !important; height: 400px !important;" class="img-fluid" src="img/15.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="project-item">
+                                <img class="img-fluid" src="img/16.jpg" alt="">
                             </div>
                         </div>
                     </div>
