--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#invite" class="nav-item nav-link">Invitation</a>
-                <a href="#gallery" class="nav-item nav-link">Gifts</a>                
-                <a href="#gift" class="nav-item nav-link">Gallery</a>
+                <a href="#gift" class="nav-item nav-link">Gifts</a>                
+                <a href="#gallery" class="nav-item nav-link">Gallery</a>
             </div>
         </div>
     </nav>
